--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -7,8 +7,8 @@
 </ion-header>
 
 <ion-content padding>
-  The world is your oyster.
+  <send></send>
   <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
+    {{estado}}
   </p>
 </ion-content>
